# Pi-Wiki

./: .env.copy  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
core/: config.py  security.py
plugins/: create_page.py  edit_page.py  get_time.py  proctor.py  read_page.py  scrape_url.py  sys_info.py
plugins/system_audit/: SKILL.md
plugins/system_audit/scripts/: check_health.sh
routers/: api_router.py  web_router.py
services/: ai_service.py  git_service.py  graph_service.py  markdown_service.py  page_service.py  plugin_service.py  rag_service.py  search_service.py  sm2_service.py
static/: fonts.css  manifest.json  sw.js  syntax.css
templates/: base.html  chat.html  edit.html  graph.html  quiz.html  search.html  settings.html  tags.html  view.html
