[project]
name = "pi-wiki"
version = "0.1.0"
description = "A lightweight flat-file markdown wiki for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "markdown>=3.6",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "gitpython>=3.1.42",
    "httpx>=0.27.0",
]